# QuantixHack

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  record_test_audio.py  seed_db.py  streamlit_app.py  test_runpod_stt.py
11labs/: websocket.py
NER/: api_test.py  dbsample.csv  finetune.py  main.py  ner_agent.py  ner_test.py  spacy_ner_claims.jsonl
NER/insurance_ner_finetuned/: meta.json
NER/insurance_ner_finetuned/ner/: moves
NER/insurance_ner_finetuned/vocab/: strings.json
alembic/: env.py
alembic/versions/: 090373bacc47_add_customer_phone_to_claims_table.py  1a23e4055458_new_migration.py  38cc799f661e_initial_migration.py  39299904d8ca_initial_migration.py
app/: agent_service.py  call_processor.py  crud.py  database.py  logger_config.py  main.py  models.py  s3_client.py  schemas.py  tts_service.py
ellabs/: websocket.py
generator/: llm_generator.py
runpod_stt_worker/: Dockerfile  main.py  pyproject.toml  stt_server.py
